going to write a working version of the simple solution before writing the moderate complexity one

--- a/okquiz.tex
+++ b/okquiz.tex
@@ -4,7 +4,7 @@
 
 \section{}
 \emph{Why do you think we didn't include error bars on the graphs in this post?}
-I would guess it is because the sample size was large enough to make the standard error not worth putting on the graphs.  Since we are dealing with binary random variables the standard deviation of the observations has an upper bound of .5, which means that even if only .1\% (500/500000) of messages contained a particular target word/phrase we would still get a standard error of only 2\%.  
+I would guess it is because the sample size was large enough to make the standard error not worth putting on the graphs.  Since we are dealing with binary random variables the standard deviation of the sampling distribution has an upper bound of .5, which means that even if only .1\% (500/500000) of messages contained a particular target word/phrase we would still get a standard error of only 2\%.  
 
 \section{}
 \emph{The file sample\_user.csv is one user's messaging history on OkCupid. Using this data, tell me a story
