corrected flow to check for intersections

--- a/okquiz.tex
+++ b/okquiz.tex
@@ -42,6 +42,6 @@ I decided to use a histogram because it seems like the most intuitive representa
 \section{}
 The algorithm for finding rectangles works by finding small squares that are densely populated using a divide and conquer approcah then ``growing'' rectangles from these squares by greedily covering neighboring squares.
 
-
+The 
 
 \end{document}
